# control

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/: control_example.cc
examples/arduino/control_example/: control_example.ino
examples/cmake/: control_example.cc
include/control/: control.h  gain.h  pid.h
src/: control.h  gain.cpp  gain.h  pid.cpp  pid.h
